Реализованы: сохранение данных, регистрация схода, подсветка выбранной команды в списке.

--- a/terminal/res/layout-land/input_team.xml
+++ b/terminal/res/layout-land/input_team.xml
@@ -46,7 +46,8 @@
                 android:id="@+id/inputTeam_teamsList"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_weight="1" >
+                android:layout_weight="1"
+                android:choiceMode="singleChoice" >
             </ListView>
         </LinearLayout>
 
