--- a/terminal/res/layout/input_team.xml
+++ b/terminal/res/layout/input_team.xml
@@ -149,7 +149,8 @@
         android:id="@+id/inputTeam_teamsList"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1" >
+        android:layout_weight="1"
+        android:choiceMode="singleChoice" >
     </ListView>
 
     <LinearLayout
