--- a/terminal/res/layout/input_team_row.xml
+++ b/terminal/res/layout/input_team_row.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         android:id="@+id/inputTeamRow_numText"
@@ -30,4 +28,4 @@
         android:gravity="left"
         android:text="Member" />
 
-</LinearLayout>
+</merge>
