Экспорт вынесен в отдельный поток. Добавлена генерация тестовых данных.

--- a/terminal/res/layout/main.xml
+++ b/terminal/res/layout/main.xml
@@ -19,7 +19,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/global_double_padding"
         android:text="@string/main_import_data" />
-    
+
     <Button
         android:id="@+id/main_exportDataBtn"
         android:layout_width="@dimen/main_button_width"
@@ -35,5 +35,15 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/global_double_padding"
         android:text="@string/main_settings" />
+
+    <!--
+    <Button
+        android:id="@+id/main_fillDataBtn"
+        android:layout_width="@dimen/main_button_width"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/global_double_padding"
+        android:text="@string/main_fill_data" />
+    -->
 
 </LinearLayout>
