--- a/terminal/res/layout/file_dialog_row.xml
+++ b/terminal/res/layout/file_dialog_row.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:id="@+id/fdrowimage"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:layout_height="?android:attr/listPreferredItemHeight"
         android:layout_alignParentLeft="true"
         android:paddingLeft="3dp"
         android:paddingRight="5dp" >
@@ -15,7 +15,7 @@
     <TextView
         android:id="@+id/fdrowtext"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
+        android:layout_height="?android:attr/listPreferredItemHeight"
         android:layout_alignBottom="@+id/fdrowimage"
         android:layout_alignTop="@+id/fdrowimage"
         android:layout_toRightOf="@+id/fdrowimage"
