--- a/terminal/res/layout/transp_export.xml
+++ b/terminal/res/layout/transp_export.xml
@@ -32,10 +32,18 @@
         android:layout_gravity="right"
         android:layout_marginTop="@dimen/global_padding" >
 
+        <ProgressBar
+            android:id="@+id/transpExport_progressBar"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical" />
+
         <Button
             android:id="@+id/transpExport_fullExportBtn"
             android:layout_width="150dip"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/global_padding"
             android:text="@string/transp_export_full" />
 
         <Button
