--- a/terminal/res/values/dimensions.xml
+++ b/terminal/res/values/dimensions.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <dimen name="global_padding">15dip</dimen>
+    <dimen name="small_padding">10dip</dimen>
     <dimen name="global_double_padding">30dip</dimen>
     <dimen name="main_button_width">300dip</dimen>
     <dimen name="main_button_text_size">32sp</dimen>
