--- a/terminal/res/layout/settings.xml
+++ b/terminal/res/layout/settings.xml
@@ -131,6 +131,23 @@
             android:text="" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/global_padding" >
+
+        <TextView
+            android:layout_width="250dip"
+            android:layout_height="wrap_content"
+            android:text="@string/settings_input_checkboxes_per_line" />
+
+        <EditText
+            android:id="@+id/settings_checkboxesPerLineEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/settings_saveBtn"
         android:layout_width="150dip"
