--- a/terminal/res/layout/input_team.xml
+++ b/terminal/res/layout/input_team.xml
@@ -18,26 +18,23 @@
 
             <Button
                 android:id="@+id/inputTeam_filterClearButton"
-                android:layout_width="wrap_content"
+                android:layout_width="100dip"
                 android:layout_height="wrap_content"
                 android:text="@string/input_team_filter_clear" />
 
             <Button
                 android:id="@+id/inputTeam_filterHideButton"
-                android:layout_width="wrap_content"
+                android:layout_width="120dip"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/global_padding"
                 android:text="@string/input_team_filter_hide" />
-
+            
             <Button
-                android:id="@+id/inputTeam_refreshDataButton"
-                android:layout_width="wrap_content"
+                android:id="@+id/inputTeam_modeButton"
+                android:layout_width="100dip"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/global_padding"
-                android:text="@string/input_team_refresh_data" >
-
-                <requestFocus />
-            </Button>
+                android:text="@string/input_team_mode_fast" />
 
             <TextView
                 android:id="@+id/inputTeam_filterStatusTextView"
@@ -65,14 +62,13 @@
                     android:layout_height="wrap_content"
                     android:text="@string/input_team_filter_number" />
 
-                <EditText
+                <ru.mmb.terminal.widget.EditTextWithSoftKeyboardSupport
                     android:id="@+id/inputTeam_filterNumberEdit"
                     android:layout_width="100dip"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionDone|flagNoEnterAction"
                     android:inputType="number"
-                    android:maxLength="4" >
-                </EditText>
+                    android:maxLength="4" />
 
                 <CheckBox
                     android:id="@+id/inputTeam_filterNumberExactCheck"
@@ -80,89 +76,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/global_padding"
                     android:text="@string/input_team_filter_number_exact" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/inputTeam_filterNumberDigitsPanel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/global_padding" >
-
-                <Button
-                    android:id="@+id/inputTeam_number1Button"
-                    android:layout_width="35dip"
-                    android:layout_height="wrap_content"
-                    android:text="1" />
-
-                <Button
-                    android:id="@+id/inputTeam_number2Button"
-                    android:layout_width="35dip"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/small_padding"
-                    android:text="2" />
-
-                <Button
-                    android:id="@+id/inputTeam_number3Button"
-                    android:layout_width="35dip"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/small_padding"
-                    android:text="3" />
-
-                <Button
-                    android:id="@+id/inputTeam_number4Button"
-                    android:layout_width="35dip"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/small_padding"
-                    android:text="4" />
-
-                <Button
-                    android:id="@+id/inputTeam_number5Button"
-                    android:layout_width="35dip"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/small_padding"
-                    android:text="5" />
-
-                <Button
-                    android:id="@+id/inputTeam_number6Button"
-                    android:layout_width="35dip"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/small_padding"
-                    android:text="6" />
-
-                <Button
-                    android:id="@+id/inputTeam_number7Button"
-                    android:layout_width="35dip"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/small_padding"
-                    android:text="7" />
-
-                <Button
-                    android:id="@+id/inputTeam_number8Button"
-                    android:layout_width="35dip"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/small_padding"
-                    android:text="8" />
-
-                <Button
-                    android:id="@+id/inputTeam_number9Button"
-                    android:layout_width="35dip"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/small_padding"
-                    android:text="9" />
-
-                <Button
-                    android:id="@+id/inputTeam_number0Button"
-                    android:layout_width="35dip"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/small_padding"
-                    android:text="0" />
-
-                <Button
-                    android:id="@+id/inputTeam_numberCButton"
-                    android:layout_width="40dip"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/global_double_padding"
-                    android:text="C" />
             </LinearLayout>
 
             <LinearLayout
@@ -176,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/input_team_filter_team" />
 
-                <EditText
+                <ru.mmb.terminal.widget.EditTextWithSoftKeyboardSupport
                     android:id="@+id/inputTeam_filterTeamEdit"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
@@ -190,7 +103,7 @@
                     android:layout_marginLeft="@dimen/global_padding"
                     android:text="@string/input_team_filter_member" />
 
-                <EditText
+                <ru.mmb.terminal.widget.EditTextWithSoftKeyboardSupport
                     android:id="@+id/inputTeam_filterMemberEdit"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
@@ -253,12 +166,14 @@
             android:layout_marginRight="@dimen/global_padding"
             android:text="@string/input_team_no_team" />
 
-        <Button
+        <!--
+             <Button
             android:id="@+id/inputTeam_withdrawMemberButton"
             android:layout_width="100dip"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/global_padding"
             android:text="@string/input_team_withdraw_member" />
+        -->
 
         <Button
             android:id="@+id/inputTeam_inputDataButton"
