--- a/terminal/res/layout/settings.xml
+++ b/terminal/res/layout/settings.xml
@@ -8,145 +8,157 @@
     android:paddingRight="@dimen/global_padding"
     android:paddingTop="@dimen/global_padding" >
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent"
+        android:layout_weight="1" >
 
-        <TextView
-            android:layout_width="250dip"
-            android:layout_height="wrap_content"
-            android:text="@string/settings_user_id" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/settings_userIdEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:inputType="numberSigned" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/global_padding" >
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_user_id" />
 
-        <TextView
-            android:layout_width="250dip"
-            android:layout_height="wrap_content"
-            android:text="@string/settings_device_id" />
+                <EditText
+                    android:id="@+id/settings_userIdEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:inputType="numberSigned" />
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/settings_deviceIdEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:inputType="numberSigned" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/global_padding" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/global_padding" >
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_device_id" />
 
-        <TextView
-            android:layout_width="250dip"
-            android:layout_height="wrap_content"
-            android:text="@string/settings_current_raid_id" />
+                <EditText
+                    android:id="@+id/settings_deviceIdEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:inputType="numberSigned" />
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/settings_currentRaidIdEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:inputType="numberSigned" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/global_padding" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/global_padding" >
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_current_raid_id" />
 
-        <TextView
-            android:layout_width="250dip"
-            android:layout_height="wrap_content"
-            android:text="@string/settings_last_export_date" />
+                <EditText
+                    android:id="@+id/settings_currentRaidIdEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:inputType="numberSigned" />
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/settings_lastExportDateEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:editable="false" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/global_padding" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/global_padding" >
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_last_export_date" />
 
-        <TextView
-            android:layout_width="250dip"
-            android:layout_height="wrap_content"
-            android:text="@string/settings_transp_user_id" />
+                <EditText
+                    android:id="@+id/settings_lastExportDateEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:editable="false" />
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/settings_transpUserIdEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:inputType="numberSigned" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/global_padding" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/global_padding" >
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_transp_user_id" />
 
-        <TextView
-            android:layout_width="250dip"
-            android:layout_height="wrap_content"
-            android:text="@string/settings_transp_user_password" />
+                <EditText
+                    android:id="@+id/settings_transpUserIdEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:inputType="numberSigned" />
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/settings_transpUserPasswordEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/global_padding" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/global_padding" >
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_transp_user_password" />
 
-        <TextView
-            android:layout_width="250dip"
-            android:layout_height="wrap_content"
-            android:text="@string/settings_team_clear_filter" />
+                <EditText
+                    android:id="@+id/settings_transpUserPasswordEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
 
-        <CheckBox
-            android:id="@+id/settings_teamClearFilterCheckbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/global_padding" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/global_padding" >
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_team_clear_filter" />
 
-        <TextView
-            android:layout_width="250dip"
-            android:layout_height="wrap_content"
-            android:text="@string/settings_input_checkboxes_per_line" />
+                <CheckBox
+                    android:id="@+id/settings_teamClearFilterCheckbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="" />
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/settings_checkboxesPerLineEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/global_padding" >
+
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_team_fast_select" />
+
+                <CheckBox
+                    android:id="@+id/settings_teamFastSelectCheckbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <Button
         android:id="@+id/settings_saveBtn"
