--- a/terminal/res/layout/input_withdraw.xml
+++ b/terminal/res/layout/input_withdraw.xml
@@ -13,13 +13,27 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/inputWithdraw_teamNameTextView"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/input_withdraw_no_team" />
+            android:layout_gravity="left" >
+
+            <TextView
+                android:id="@+id/inputWithdraw_teamNumberTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/input_withdraw_no_team_number"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/inputWithdraw_teamNameTextView"
+                android:layout_width="400dip"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/global_padding"
+                android:text="@string/input_data_no_team"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/Tan" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,14 +73,15 @@
             android:layout_height="0dip"
             android:layout_weight="1" >
         </ListView>
-
+
         <TextView
             android:id="@+id/inputWithdraw_resultTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginTop="@dimen/global_padding"
-            android:text="@string/input_withdraw_no_result" />
+            android:text="@string/input_withdraw_no_result"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <LinearLayout
             android:layout_width="wrap_content"
