--- a/terminal/res/layout/main.xml
+++ b/terminal/res/layout/main.xml
@@ -1,48 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
-    android:orientation="vertical" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/global_padding"
+    android:paddingLeft="@dimen/global_padding"
+    android:paddingRight="@dimen/global_padding"
+    android:paddingTop="@dimen/global_padding" >
 
-    <Button
-        android:id="@+id/main_inputDataBtn"
-        android:layout_width="@dimen/main_button_width"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/main_input_data" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-    <Button
-        android:id="@+id/main_importDataBtn"
-        android:layout_width="@dimen/main_button_width"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/global_double_padding"
-        android:text="@string/main_import_data" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/main_exportDataBtn"
-        android:layout_width="@dimen/main_button_width"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/global_padding"
-        android:text="@string/main_export_data" />
+            <TextView
+                android:id="@+id/main_dataBaseFileLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="@string/main_database_file"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/Red" />
 
-    <Button
-        android:id="@+id/main_settingsBtn"
-        android:layout_width="@dimen/main_button_width"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/global_double_padding"
-        android:text="@string/main_settings" />
+            <TextView
+                android:id="@+id/main_dataBaseConnectionLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="@dimen/global_padding"
+                android:text="@string/main_database_connection_NOK"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/Red" />
 
-    <!--
+            <TextView
+                android:id="@+id/main_currentRaidIDLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="@dimen/global_padding"
+                android:text="@string/main_current_raid_id"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/Red" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/main_inputDataBtn"
+                android:layout_width="@dimen/main_button_width"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/main_input_data" />
+
+            <Button
+                android:id="@+id/main_importDataBtn"
+                android:layout_width="@dimen/main_button_width"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/global_double_padding"
+                android:text="@string/main_import_data" />
+
+            <Button
+                android:id="@+id/main_exportDataBtn"
+                android:layout_width="@dimen/main_button_width"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/global_padding"
+                android:text="@string/main_export_data" />
+
+            <Button
+                android:id="@+id/main_settingsBtn"
+                android:layout_width="@dimen/main_button_width"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/global_double_padding"
+                android:text="@string/main_settings" />
+
+            <!--
     <Button
         android:id="@+id/main_fillDataBtn"
         android:layout_width="@dimen/main_button_width"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/global_double_padding"
-        android:text="@string/main_fill_data" />    -->
+        android:text="@string/main_fill_data" />
+            -->
+
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
