--- a/terminal/res/layout-land/input_history.xml
+++ b/terminal/res/layout-land/input_history.xml
@@ -40,8 +40,8 @@
 
         <ListView
             android:id="@+id/inputHistory_historyList"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:choiceMode="singleChoice" >
         </ListView>
