--- a/terminal/res/values/colors.xml
+++ b/terminal/res/values/colors.xml
@@ -142,5 +142,6 @@
     <color name="DarkBlue">#00008B</color>
     <color name="Navy">#000080</color>
     <color name="Black">#000000</color>
+    <color name="PaleBlack">#303030</color>
 
 </resources>
