--- a/terminal/res/layout/settings.xml
+++ b/terminal/res/layout/settings.xml
@@ -54,6 +54,14 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <Button
+                android:id="@+id/settings_importDeviceJsonBtn"
+                android:layout_width="150dip"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="@dimen/global_padding"
+                android:text="@string/settings_import_device_json" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -109,25 +117,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:inputType="numberSigned" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/global_padding" >
-
-                <TextView
-                    android:layout_width="250dip"
-                    android:layout_height="wrap_content"
-                    android:text="@string/settings_last_export_date"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                <EditText
-                    android:id="@+id/settings_lastExportDateEdit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:editable="false" />
             </LinearLayout>
 
             <LinearLayout
