--- a/terminal/res/layout/transp_export.xml
+++ b/terminal/res/layout/transp_export.xml
@@ -9,51 +9,163 @@
     android:paddingTop="@dimen/global_padding" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/transportExport_dataPanel"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right" >
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/global_padding"
+        android:paddingLeft="@dimen/global_padding"
+        android:paddingRight="@dimen/global_padding"
+        android:paddingTop="@dimen/global_padding" >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/transp_export_last_export_date"
+            android:layout_gravity="left"
+            android:text="@string/transp_export_data_title"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <TextView
-            android:id="@+id/transpExport_lastExportTextView"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/global_padding"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/global_padding" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/transp_export_data_last_export_date"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/transpExportData_lastExportTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/global_padding"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/global_padding" >
+
+            <Button
+                android:id="@+id/transpExportData_fullExportBtn"
+                android:layout_width="150dip"
+                android:layout_height="wrap_content"
+                android:text="@string/transp_export_data_full" />
+
+            <Button
+                android:id="@+id/transpExportData_incrementalExportBtn"
+                android:layout_width="150dip"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/global_padding"
+                android:text="@string/transp_export_data_incremental" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/transportExport_barcodePanel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/global_padding"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/global_padding"
+        android:paddingLeft="@dimen/global_padding"
+        android:paddingRight="@dimen/global_padding"
+        android:paddingTop="@dimen/global_padding" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:text="@string/transp_export_barcode_title"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/global_padding" >
+
+            <TextView
+                android:id="@+id/transpExportBarcode_levelPointTextView"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/transp_export_barcode_no_levelpoint"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <Button
+                android:id="@+id/transpExportBarcode_selectLevelPointBtn"
+                android:layout_width="150dip"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/global_padding"
+                android:text="@string/transp_export_barcode_select_levelpoint" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/global_padding" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/transp_export_barcode_last_export_date"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/transpExportBarcode_lastExportTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/global_padding"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/global_padding" >
+
+            <Button
+                android:id="@+id/transpExportBarcode_fullExportBtn"
+                android:layout_width="150dip"
+                android:layout_height="wrap_content"
+                android:text="@string/transp_export_barcode_full" />
+
+            <Button
+                android:id="@+id/transpExportBarcode_incrementalExportBtn"
+                android:layout_width="150dip"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/global_padding"
+                android:text="@string/transp_export_barcode_incremental" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/transpExport_progressBarPanel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/global_padding" >
 
         <ProgressBar
-            android:id="@+id/transpExport_progressBar"
-            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical" />
-
-        <Button
-            android:id="@+id/transpExport_fullExportBtn"
-            android:layout_width="150dip"
-            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/global_padding"
-            android:text="@string/transp_export_full" />
-
-        <Button
-            android:id="@+id/transpExport_incrementalExportBtn"
-            android:layout_width="150dip"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/global_padding"
-            android:text="@string/transp_export_incremental" />
+            android:text="@string/transp_export_running"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
 
 </LinearLayout>
