--- a/terminal/res/layout/input_start.xml
+++ b/terminal/res/layout/input_start.xml
@@ -11,35 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/inputStart_scanPointLabel"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/inputStart_distanceLabel"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:text="@string/input_start_no_distance"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <TextView
-                android:id="@+id/inputStart_levelLabel"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/global_padding"
-                android:text="@string/input_start_no_level"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <TextView
-                android:id="@+id/inputStart_modeLabel"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/global_padding"
-                android:text="@string/input_start_no_mode"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        </LinearLayout>
+            android:layout_gravity="center_vertical"
+            android:text="@string/input_start_no_scan_point"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -48,11 +26,11 @@
             android:orientation="vertical" >
 
             <Button
-                android:id="@+id/inputStart_selectLevelBtn"
+                android:id="@+id/inputStart_selectScanPointBtn"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:text="@string/input_start_select_level" />
+                android:text="@string/input_start_select_scan_point" />
         </LinearLayout>
     </LinearLayout>
 
@@ -68,14 +46,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:text="@string/input_start_proceed_input" />
-        
-        <Button
-            android:id="@+id/inputStart_scanBarCodesBtn"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="@dimen/global_padding"
-            android:text="@string/input_start_scan_bar_codes" />
     </LinearLayout>
 
 </LinearLayout>
