--- a/terminal/res/layout/transp_import_barcode.xml
+++ b/terminal/res/layout/transp_import_barcode.xml
@@ -10,7 +10,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/global_padding"
+        android:paddingRight="@dimen/global_padding"
+        android:paddingTop="@dimen/global_padding" >
 
         <TextView
             android:id="@+id/transpImport_barcodeScanPointName"
@@ -32,7 +35,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/global_padding" >
+        android:layout_marginTop="@dimen/global_padding"
+        android:paddingLeft="@dimen/global_padding"
+        android:paddingRight="@dimen/global_padding" >
 
         <TextView
             android:id="@+id/transpImport_fileName"
@@ -55,7 +60,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginTop="@dimen/global_padding" >
+        android:layout_marginTop="@dimen/global_padding"
+        android:paddingLeft="@dimen/global_padding"
+        android:paddingRight="@dimen/global_padding" >
 
         <Button
             android:id="@+id/transpImport_startBtn"
