--- a/terminal/res/layout/main.xml
+++ b/terminal/res/layout/main.xml
@@ -32,7 +32,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/global_double_padding"
                 android:text="@string/main_import_data" />
-            
+
             <Button
                 android:id="@+id/main_importBarcodeDataBtn"
                 android:layout_width="@dimen/main_button_width"
@@ -64,6 +64,16 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/global_double_padding"
                 android:text="@string/main_settings" />
+
+            <!--
+                <Button
+                android:id="@+id/main_generateBtn"
+                android:layout_width="@dimen/main_button_width"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/global_padding"
+                android:text="Generate" />
+            -->
         </LinearLayout>
     </LinearLayout>
 
